Upload trainval datasets

--- a/ljh/config.json
+++ b/ljh/config.json
@@ -4,5 +4,7 @@
   "num_class": 20,
 
   "lambda_coord": 5,
-  "lambda_noobj": 0.5
+  "lambda_noobj": 0.5,
+
+  "dir_data": "~/data/torch/VOCdetection"
 }
