Implement overall flow

--- a/ljh/config.yaml
+++ b/ljh/config.yaml
@@ -1,8 +1,24 @@
-num_grid: 7
-num_bbox: 2
-num_class: 20
+path_pretrained: null
 
+# model
+S: 7 # num_grid
+B: 2 # num_bbox
+C: 20 # num_class
+
+# loss
 lambda_coord: 5
-lambda_noobj: 0.5
+lambda_noobj: .5
 
+# data
 dir_data: '~/data/torch/VOCdetection'
+year: 2007
+
+# train
+num_epoch: 135
+batch_size: 64
+momentum: .9
+weight_decay: .0005
+
+# pred
+ths_conf: .4
+ths_iou: .5
