--- a/ljh/requirements.txt
+++ b/ljh/requirements.txt
@@ -1,8 +1,9 @@
 pillow==9.0.1
-tqdm==4.63.0
+pyyaml==6.0
 numpy==1.22.2
 pandas==1.4.1
 torch==1.10.2
 torchvision==0.11.3
 torchsummary==1.5.1
+tqdm==4.63.0
 black
