--- a/ljh/config.yaml
+++ b/ljh/config.yaml
@@ -14,7 +14,7 @@ dir_data: '/data/torch/VOCdetection'
 year: 2007
 
 # train
-num_epoch: 135
+num_epoch: 10 # 135
 batch_size: 8 # 64
 momentum: .9
 weight_decay: .0005
