--- a/ljh/config.yaml
+++ b/ljh/config.yaml
@@ -15,8 +15,8 @@ dir_data: '/data/torch/VOCdetection'
 year: 2007
 
 # train
-num_epoch: 10 # 135
-batch_size: 8 # 64
+num_epoch: 135
+batch_size: 16 # 64
 momentum: .9
 weight_decay: .0005
 
